--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -7,6 +7,12 @@
         The actual rendered columns are set as a property on the row definition" -->
 
       <!-- Name Column -->
+      <ng-container matColumnDef="_id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let course">{{ course._id }}</td>
+      </ng-container>
+
+      <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Nome do Curso</th>
         <td mat-cell *matCellDef="let course">{{ course.name }}</td>
@@ -15,7 +21,12 @@
       <!-- Category Column -->
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef>Categoria do Curso</th>
-        <td mat-cell *matCellDef="let course">{{ course.category }}</td>
+        <td mat-cell *matCellDef="let course">
+          {{ course.category }}
+          <mat-icon aria-hidden="false" aria-label="Categoria do Curso">{{
+            course.category | category
+          }}</mat-icon>
+        </td>
       </ng-container>
 
       <!-- Weight Column -->
